Fixing list spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,33 @@
 }
 
 .about-us p {
+   font-family: 'Lato', sans-serif;
    padding: 0px 5%;
 }
+
+.rules {
+   font-family: 'Lato', sans-serif;
+}
+
+.rules h3 {
+   font-family: 'Noto Sans JP', sans-serif;
+   padding: 25px 5%;
+}
+
+.rules h4 {
+   font-family: 'Noto Sans JP', sans-serif;
+   padding: 25px 5%;
+}
+
+.rules li {
+   padding-top: 2px;
+   padding-left: 5%;
+}
+
+.rules p {
+   padding-left: 5%;
+}
+
 
 /*------------------Footer--*/
 
